--- a/12209073_KaylaAyesthaBachrie.html
+++ b/12209073_KaylaAyesthaBachrie.html
@@ -3,14 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>FIlE AYESTHA</title>
 </head>
 <body>
-    <h1>
-        HALLO GESS..
-    </h1>
-    <H2>
-        ANTON WITJAKSONO
-    </H2>
+
+    <H1>Selamat Datang !</H1>
+    <h2>Ini File Ayestha</h2>
+    
 </body>
 </html>
