--- a/12209107_MuhamadFachrieFauzi.html
+++ b/12209107_MuhamadFachrieFauzi.html
@@ -6,11 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>
-        HALLO GESS..
-    </h1>
-    <H2>
-        ANTON WITJAKSONO
-    </H2>
+    <h1>Ini file punya Fachrie Fauzi</h1>
 </body>
 </html>
