--- a/12209242_IrsyadNat.html
+++ b/12209242_IrsyadNat.html
@@ -3,14 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Muhammad Irsyad Nataprawira</title>
 </head>
 <body>
-    <h1>
-        HALLO GESS..
-    </h1>
-    <H2>
-        ANTON WITJAKSONO
-    </H2>
+    <h2>Welcome to my page</h2>
+    <p>Nis : 12209242</p>
+    <p>Nama : Muhammad Irsyad Nataprawira</p>
 </body>
 </html>
