--- a/12209282_zacky.html
+++ b/12209282_zacky.html
@@ -6,11 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>
-        HALLO GESS..
-    </h1>
-    <H2>
-        ANTON WITJAKSONO
-    </H2>
+    <h1>selamat datang</h1>
+    <h2>ini file milik zacky</h2>
 </body>
 </html>
