--- a/12209102_mSulistioFauzi.html
+++ b/12209102_mSulistioFauzi.html
@@ -6,11 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>
-        HALLO GESS..
-    </h1>
-    <H2>
-        ANTON WITJAKSONO
-    </H2>
+    
+    <h1>Belajar Github</h1>
+    <h1>Ini file milik Tio</h1>
+
 </body>
 </html>
