--- a/12209255_Ramdoni.html
+++ b/12209255_Ramdoni.html
@@ -6,11 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>
-        HALLO GESS..
-    </h1>
-    <H2>
-        ANTON WITJAKSONO
-    </H2>
+    <h1>Selamat Datang</h1>
+    <h1>Ini file ini milik ramdoni</h1>
 </body>
 </html>
