--- a/12209370_RasyaAlamsyah.html
+++ b/12209370_RasyaAlamsyah.html
@@ -2,15 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
-    <h1>
-        HALLO GESS..
-    </h1>
-    <H2>
-        ANTON WITJAKSONO
-    </H2>
+    <h1>Selamat datang</h1>
+    <h2>ini file milik Rasya Alamsyah</h2>
 </body>
 </html>
