--- a/12209468_YudistiraDharmaWardana.html
+++ b/12209468_YudistiraDharmaWardana.html
@@ -6,11 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>
-        HALLO GESS..
-    </h1>
-    <H2>
-        ANTON WITJAKSONO
-    </H2>
+    <h1>Selamat Datang</h1>
+    <h2>File ini Milik Yudistira</h2>
 </body>
 </html>
